# concept_driver

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
docker/: railway-qwen-entrypoint.sh
docs/: research-brief.md  roadmap.md
examples/: example_concepts.csv  example_corpus.txt
src/concept_driver/: __init__.py  __main__.py  cli.py  data.py  embeddings.py  geometry.py  llm_concepts.py  query.py  railway_api.py  remote_llm.py  reporting.py
tests/: test_auto_concepts.py  test_cli.py  test_data.py  test_embeddings.py  test_llm_concepts.py  test_query.py  test_railway_api.py  test_remote_llm.py
